ExpenseTrackerBackend/src/main/java/com/example/expenseit/errors/authentication/NoJwtTokenProvidedException.java
package com.example.expenseit.errors.authentication;

public class NoJwtTokenProvidedException extends AuthException {
    public NoJwtTokenProvidedException(String message) {
        super(message);
    }
}